@@ -18,23 +18,12 @@
  */
 package org.apache.pinot.common.tier;
 
-import com.google.common.collect.Sets;
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import org.apache.helix.HelixManager;
-import org.apache.helix.store.zk.ZkHelixPropertyStore;
-import org.apache.helix.zookeeper.datamodel.ZNRecord;
-import org.apache.pinot.common.metadata.ZKMetadataProvider;
 import org.apache.pinot.common.metadata.segment.SegmentZKMetadata;
-import org.apache.pinot.spi.utils.CommonConstants;
+import org.apache.pinot.spi.utils.CommonConstants.Segment.Realtime.Status;
 import org.testng.Assert;
 import org.testng.annotations.Test;
-
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 
 public class TierSegmentSelectorTest {
@@ -51,33 +40,24 @@ public class TierSegmentSelectorTest {
     offlineSegmentZKMetadata.setStartTime((now - TimeUnit.DAYS.toMillis(9)));
     offlineSegmentZKMetadata.setEndTime((now - TimeUnit.DAYS.toMillis(8)));
     offlineSegmentZKMetadata.setTimeUnit(TimeUnit.MILLISECONDS);
-    ZNRecord segmentZKMetadataZNRecord = offlineSegmentZKMetadata.toZNRecord();
-
-    ZkHelixPropertyStore<ZNRecord> propertyStore = mock(ZkHelixPropertyStore.class);
-    when(propertyStore
-        .get(eq(ZKMetadataProvider.constructPropertyStorePathForSegment(tableNameWithType, segmentName)), any(),
-            anyInt())).thenReturn(segmentZKMetadataZNRecord);
-
-    HelixManager helixManager = mock(HelixManager.class);
-    when(helixManager.getHelixPropertyStore()).thenReturn(propertyStore);
 
     // segment is 8 days old. selected by 7d
-    TimeBasedTierSegmentSelector segmentSelector = new TimeBasedTierSegmentSelector(helixManager, "7d");
+    TimeBasedTierSegmentSelector segmentSelector = new TimeBasedTierSegmentSelector("7d");
     Assert.assertEquals(segmentSelector.getType(), TierFactory.TIME_SEGMENT_SELECTOR_TYPE);
     Assert.assertEquals(segmentSelector.getSegmentAgeMillis(), TimeUnit.DAYS.toMillis(7));
-    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, offlineSegmentZKMetadata));
 
     // not selected by 30d
-    segmentSelector = new TimeBasedTierSegmentSelector(helixManager, "30d");
-    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new TimeBasedTierSegmentSelector("30d");
+    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, offlineSegmentZKMetadata));
 
     // not selected by 10d
-    segmentSelector = new TimeBasedTierSegmentSelector(helixManager, "240h");
-    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new TimeBasedTierSegmentSelector("240h");
+    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, offlineSegmentZKMetadata));
 
     // selected by 4h
-    segmentSelector = new TimeBasedTierSegmentSelector(helixManager, "240m");
-    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new TimeBasedTierSegmentSelector("240m");
+    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, offlineSegmentZKMetadata));
 
     // realtime segment
     segmentName = "myTable__4__1__" + now;
@@ -86,32 +66,23 @@ public class TierSegmentSelectorTest {
     realtimeSegmentZKMetadata.setStartTime(TimeUnit.MILLISECONDS.toHours(now - TimeUnit.DAYS.toMillis(3)));
     realtimeSegmentZKMetadata.setEndTime(TimeUnit.MILLISECONDS.toHours((now - TimeUnit.DAYS.toMillis(2))));
     realtimeSegmentZKMetadata.setTimeUnit(TimeUnit.HOURS);
-    realtimeSegmentZKMetadata.setStatus(CommonConstants.Segment.Realtime.Status.DONE);
-    realtimeSegmentZKMetadata.setNumReplicas(1);
-    segmentZKMetadataZNRecord = realtimeSegmentZKMetadata.toZNRecord();
-
-    when(propertyStore
-        .get(eq(ZKMetadataProvider.constructPropertyStorePathForSegment(tableNameWithType, segmentName)), any(),
-            anyInt())).thenReturn(segmentZKMetadataZNRecord);
-
-    helixManager = mock(HelixManager.class);
-    when(helixManager.getHelixPropertyStore()).thenReturn(propertyStore);
+    realtimeSegmentZKMetadata.setStatus(Status.DONE);
 
     // segment is 2 days old. not selected by 7d
-    segmentSelector = new TimeBasedTierSegmentSelector(helixManager, "7d");
-    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new TimeBasedTierSegmentSelector("7d");
+    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, realtimeSegmentZKMetadata));
 
     // selected by 1d
-    segmentSelector = new TimeBasedTierSegmentSelector(helixManager, "1d");
-    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new TimeBasedTierSegmentSelector("1d");
+    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, realtimeSegmentZKMetadata));
 
     // selected by 10h
-    segmentSelector = new TimeBasedTierSegmentSelector(helixManager, "600m");
-    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new TimeBasedTierSegmentSelector("600m");
+    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, realtimeSegmentZKMetadata));
 
     // not selected by 5d
-    segmentSelector = new TimeBasedTierSegmentSelector(helixManager, "120h");
-    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new TimeBasedTierSegmentSelector("120h");
+    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, realtimeSegmentZKMetadata));
   }
 
   @Test
@@ -122,20 +93,10 @@ public class TierSegmentSelectorTest {
     String segmentName = "myTable__4__1__" + now;
     String tableNameWithType = "myTable_REALTIME";
     SegmentZKMetadata realtimeSegmentZKMetadata = new SegmentZKMetadata(segmentName);
-    realtimeSegmentZKMetadata.setStatus(CommonConstants.Segment.Realtime.Status.IN_PROGRESS);
+    realtimeSegmentZKMetadata.setStatus(Status.IN_PROGRESS);
 
-    ZNRecord segmentZKMetadataZNRecord = realtimeSegmentZKMetadata.toZNRecord();
-
-    ZkHelixPropertyStore<ZNRecord> propertyStore = mock(ZkHelixPropertyStore.class);
-    when(propertyStore
-            .get(eq(ZKMetadataProvider.constructPropertyStorePathForSegment(tableNameWithType, segmentName)), any(),
-                    anyInt())).thenReturn(segmentZKMetadataZNRecord);
-
-    HelixManager helixManager = mock(HelixManager.class);
-    when(helixManager.getHelixPropertyStore()).thenReturn(propertyStore);
-
-    TimeBasedTierSegmentSelector segmentSelector = new TimeBasedTierSegmentSelector(helixManager, "7d");
-    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    TimeBasedTierSegmentSelector segmentSelector = new TimeBasedTierSegmentSelector("7d");
+    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, realtimeSegmentZKMetadata));
   }
 
   @Test
@@ -144,22 +105,23 @@ public class TierSegmentSelectorTest {
     // offline segment
     String segmentName = "segment_0";
     String tableNameWithType = "myTable_OFFLINE";
+    SegmentZKMetadata offlineSegmentZKMetadata = new SegmentZKMetadata(segmentName);
 
-    FixedTierSegmentSelector segmentSelector = new FixedTierSegmentSelector(null, Collections.emptySet());
-    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    FixedTierSegmentSelector segmentSelector = new FixedTierSegmentSelector(Set.of());
+    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, offlineSegmentZKMetadata));
 
-    segmentSelector = new FixedTierSegmentSelector(null, Sets.newHashSet("segment_1", "segment_2"));
-    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new FixedTierSegmentSelector(Set.of("segment_1", "segment_2"));
+    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, offlineSegmentZKMetadata));
 
-    segmentSelector = new FixedTierSegmentSelector(null, Sets.newHashSet("SEGMENT_0", "segment_1", "segment_2"));
-    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new FixedTierSegmentSelector(Set.of("SEGMENT_0", "segment_1", "segment_2"));
+    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, offlineSegmentZKMetadata));
 
-    segmentSelector = new FixedTierSegmentSelector(null, Sets.newHashSet("segment_0", "segment_1", "segment_2"));
-    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new FixedTierSegmentSelector(Set.of("segment_0", "segment_1", "segment_2"));
+    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, offlineSegmentZKMetadata));
 
-    segmentSelector = new FixedTierSegmentSelector(null, Sets.newHashSet("segment %", "segment_2"));
-    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, segmentName));
-    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, "segment %"));
+    segmentSelector = new FixedTierSegmentSelector(Set.of("segment %", "segment_2"));
+    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, offlineSegmentZKMetadata));
+    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, new SegmentZKMetadata("segment %")));
 
     // realtime segment
     segmentName = "myTable__4__1__" + 123456789;
@@ -168,25 +130,12 @@ public class TierSegmentSelectorTest {
     realtimeSegmentZKMetadata.setStartTime(System.currentTimeMillis() - 10000);
     realtimeSegmentZKMetadata.setEndTime(System.currentTimeMillis() - 5000);
     realtimeSegmentZKMetadata.setTimeUnit(TimeUnit.MILLISECONDS);
-    realtimeSegmentZKMetadata.setStatus(CommonConstants.Segment.Realtime.Status.DONE);
-    realtimeSegmentZKMetadata.setNumReplicas(1);
-    ZNRecord segmentZKMetadataZNRecord = realtimeSegmentZKMetadata.toZNRecord();
+    realtimeSegmentZKMetadata.setStatus(Status.DONE);
 
-    HelixManager helixManager = mock(HelixManager.class);
-    ZkHelixPropertyStore<ZNRecord> propertyStore = mock(ZkHelixPropertyStore.class);
-    when(propertyStore
-        .get(eq(ZKMetadataProvider.constructPropertyStorePathForSegment(tableNameWithType, segmentName)), any(),
-            anyInt())).thenReturn(segmentZKMetadataZNRecord);
-    when(helixManager.getHelixPropertyStore()).thenReturn(propertyStore);
-    segmentSelector = new FixedTierSegmentSelector(helixManager, Sets.newHashSet(segmentName, "foo", "bar"));
-    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    segmentSelector = new FixedTierSegmentSelector(Set.of(segmentName, "foo", "bar"));
+    Assert.assertTrue(segmentSelector.selectSegment(tableNameWithType, realtimeSegmentZKMetadata));
 
-    realtimeSegmentZKMetadata.setStatus(CommonConstants.Segment.Realtime.Status.IN_PROGRESS);
-    segmentZKMetadataZNRecord = realtimeSegmentZKMetadata.toZNRecord();
-    when(propertyStore
-        .get(eq(ZKMetadataProvider.constructPropertyStorePathForSegment(tableNameWithType, segmentName)), any(),
-            anyInt())).thenReturn(segmentZKMetadataZNRecord);
-    when(helixManager.getHelixPropertyStore()).thenReturn(propertyStore);
-    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, segmentName));
+    realtimeSegmentZKMetadata.setStatus(Status.IN_PROGRESS);
+    Assert.assertFalse(segmentSelector.selectSegment(tableNameWithType, realtimeSegmentZKMetadata));
   }
 }
