@@ -18,14 +18,10 @@
  */
 package org.apache.pinot.core.plan.maker;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import javax.annotation.Nullable;
 import org.apache.pinot.common.request.Expression;
 import org.apache.pinot.common.request.PinotQuery;
 import org.apache.pinot.common.request.context.ExpressionContext;
@@ -37,82 +33,26 @@ import org.apache.pinot.common.utils.request.RequestUtils;
 import org.apache.pinot.core.query.request.context.QueryContext;
 import org.apache.pinot.core.query.request.context.utils.QueryContextConverterUtils;
 import org.apache.pinot.segment.spi.IndexSegment;
-import org.apache.pinot.segment.spi.SegmentMetadata;
-import org.apache.pinot.segment.spi.datasource.DataSource;
-import org.apache.pinot.segment.spi.index.mutable.ThreadSafeMutableRoaringBitmap;
-import org.apache.pinot.segment.spi.index.startree.StarTreeV2;
 import org.apache.pinot.spi.data.FieldSpec;
-import org.apache.pinot.spi.data.readers.GenericRow;
 import org.apache.pinot.sql.parsers.CalciteSqlParser;
+import org.mockito.Mockito;
+import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
+import static org.mockito.Mockito.mock;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertNotEquals;
 
 
 public class QueryOverrideWithHintsTest {
 
-  private final IndexSegment _indexSegment = new IndexSegment() {
-    @Override
-    public String getSegmentName() {
-      return null;
-    }
+  private IndexSegment _indexSegment;
 
-    @Override
-    public SegmentMetadata getSegmentMetadata() {
-      return null;
-    }
-
-    @Override
-    public Set<String> getColumnNames() {
-      return ImmutableSet.of("$ts$MONTH");
-    }
-
-    @Override
-    public Set<String> getPhysicalColumnNames() {
-      return null;
-    }
-
-    @Override
-    public DataSource getDataSource(String columnName) {
-      return null;
-    }
-
-    @Override
-    public List<StarTreeV2> getStarTrees() {
-      return null;
-    }
-
-    @Nullable
-    @Override
-    public ThreadSafeMutableRoaringBitmap getValidDocIds() {
-      return null;
-    }
-
-    @Nullable
-    @Override
-    public ThreadSafeMutableRoaringBitmap getQueryableDocIds() {
-      return null;
-    }
-
-    @Override
-    public GenericRow getRecord(int docId, GenericRow reuse) {
-      return null;
-    }
-
-    @Override
-    public Object getValue(int docId, String column) {
-      return null;
-    }
-
-    @Override
-    public void offload() {
-    }
-
-    @Override
-    public void destroy() {
-    }
-  };
+  @BeforeClass
+  public void setUp() {
+    _indexSegment = mock(IndexSegment.class);
+    Mockito.when(_indexSegment.getColumnNames()).thenReturn(Set.of("$ts$MONTH"));
+  }
 
   @Test
   public void testExpressionContextHashcode() {
@@ -138,19 +78,19 @@ public class QueryOverrideWithHintsTest {
     assertNotEquals(expressionContext1.hashCode(), expressionContext2.hashCode());
 
     expressionContext1 = ExpressionContext.forFunction(new FunctionContext(FunctionContext.Type.TRANSFORM, "func1",
-        ImmutableList.of(ExpressionContext.forIdentifier("abc"),
+        List.of(ExpressionContext.forIdentifier("abc"),
             ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "abc"))));
     expressionContext2 = ExpressionContext.forFunction(new FunctionContext(FunctionContext.Type.TRANSFORM, "func1",
-        ImmutableList.of(ExpressionContext.forIdentifier("abc"),
+        List.of(ExpressionContext.forIdentifier("abc"),
             ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "abc"))));
     assertEquals(expressionContext1, expressionContext2);
     assertEquals(expressionContext1.hashCode(), expressionContext2.hashCode());
 
     expressionContext1 = ExpressionContext.forFunction(new FunctionContext(FunctionContext.Type.TRANSFORM, "datetrunc",
-        ImmutableList.of(ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "DAY"),
+        List.of(ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "DAY"),
             ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "event_time_ts"))));
     expressionContext2 = ExpressionContext.forFunction(new FunctionContext(FunctionContext.Type.TRANSFORM, "datetrunc",
-        ImmutableList.of(ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "DAY"),
+        List.of(ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "DAY"),
             ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "event_time_ts"))));
     assertEquals(expressionContext1, expressionContext2);
     assertEquals(expressionContext1.hashCode(), expressionContext2.hashCode());
@@ -160,15 +100,14 @@ public class QueryOverrideWithHintsTest {
   public void testOverrideFilterWithExpressionOverrideHints() {
     ExpressionContext dateTruncFunctionExpr = ExpressionContext.forFunction(
         new FunctionContext(FunctionContext.Type.TRANSFORM, "dateTrunc", new ArrayList<>(new ArrayList<>(
-            ImmutableList.of(ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "MONTH"),
+            List.of(ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "MONTH"),
                 ExpressionContext.forIdentifier("ts"))))));
     ExpressionContext timestampIndexColumn = ExpressionContext.forIdentifier("$ts$MONTH");
     ExpressionContext equalsExpression = ExpressionContext.forFunction(
         new FunctionContext(FunctionContext.Type.TRANSFORM, "EQUALS", new ArrayList<>(
-            ImmutableList.of(dateTruncFunctionExpr,
-                ExpressionContext.forLiteral(FieldSpec.DataType.INT, 1000)))));
+            List.of(dateTruncFunctionExpr, ExpressionContext.forLiteral(FieldSpec.DataType.INT, 1000)))));
     FilterContext filter = RequestContextUtils.getFilter(equalsExpression);
-    Map<ExpressionContext, ExpressionContext> hints = ImmutableMap.of(dateTruncFunctionExpr, timestampIndexColumn);
+    Map<ExpressionContext, ExpressionContext> hints = Map.of(dateTruncFunctionExpr, timestampIndexColumn);
     InstancePlanMakerImplV2.overrideWithExpressionHints(filter, _indexSegment, hints);
     assertEquals(filter.getType(), FilterContext.Type.PREDICATE);
     assertEquals(filter.getPredicate().getLhs(), timestampIndexColumn);
@@ -176,7 +115,7 @@ public class QueryOverrideWithHintsTest {
 
     FilterContext andFilter = RequestContextUtils.getFilter(ExpressionContext.forFunction(
         new FunctionContext(FunctionContext.Type.TRANSFORM, "AND",
-            new ArrayList<>(ImmutableList.of(equalsExpression, equalsExpression)))));
+            new ArrayList<>(List.of(equalsExpression, equalsExpression)))));
     InstancePlanMakerImplV2.overrideWithExpressionHints(andFilter, _indexSegment, hints);
     assertEquals(andFilter.getChildren().get(0).getPredicate().getLhs(), timestampIndexColumn);
     assertEquals(andFilter.getChildren().get(1).getPredicate().getLhs(), timestampIndexColumn);
@@ -186,14 +125,13 @@ public class QueryOverrideWithHintsTest {
   public void testOverrideWithExpressionOverrideHints() {
     ExpressionContext dateTruncFunctionExpr = ExpressionContext.forFunction(
         new FunctionContext(FunctionContext.Type.TRANSFORM, "dateTrunc", new ArrayList<>(
-            ImmutableList.of(ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "MONTH"),
+            List.of(ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "MONTH"),
                 ExpressionContext.forIdentifier("ts")))));
     ExpressionContext timestampIndexColumn = ExpressionContext.forIdentifier("$ts$MONTH");
     ExpressionContext equalsExpression = ExpressionContext.forFunction(
         new FunctionContext(FunctionContext.Type.TRANSFORM, "EQUALS", new ArrayList<>(
-            ImmutableList.of(dateTruncFunctionExpr,
-                ExpressionContext.forLiteral(FieldSpec.DataType.INT, 1000)))));
-    Map<ExpressionContext, ExpressionContext> hints = ImmutableMap.of(dateTruncFunctionExpr, timestampIndexColumn);
+            List.of(dateTruncFunctionExpr, ExpressionContext.forLiteral(FieldSpec.DataType.INT, 1000)))));
+    Map<ExpressionContext, ExpressionContext> hints = Map.of(dateTruncFunctionExpr, timestampIndexColumn);
     ExpressionContext newEqualsExpression =
         InstancePlanMakerImplV2.overrideWithExpressionHints(equalsExpression, _indexSegment, hints);
     assertEquals(newEqualsExpression.getFunction().getFunctionName(), "equals");
@@ -206,14 +144,13 @@ public class QueryOverrideWithHintsTest {
   public void testNotOverrideWithExpressionOverrideHints() {
     ExpressionContext dateTruncFunctionExpr = ExpressionContext.forFunction(
         new FunctionContext(FunctionContext.Type.TRANSFORM, "dateTrunc", new ArrayList<>(
-            ImmutableList.of(ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "DAY"),
+            List.of(ExpressionContext.forLiteral(FieldSpec.DataType.STRING, "DAY"),
                 ExpressionContext.forIdentifier("ts")))));
     ExpressionContext timestampIndexColumn = ExpressionContext.forIdentifier("$ts$DAY");
     ExpressionContext equalsExpression = ExpressionContext.forFunction(
         new FunctionContext(FunctionContext.Type.TRANSFORM, "EQUALS", new ArrayList<>(
-            ImmutableList.of(dateTruncFunctionExpr,
-                ExpressionContext.forLiteral(FieldSpec.DataType.INT, 1000)))));
-    Map<ExpressionContext, ExpressionContext> hints = ImmutableMap.of(dateTruncFunctionExpr, timestampIndexColumn);
+            List.of(dateTruncFunctionExpr, ExpressionContext.forLiteral(FieldSpec.DataType.INT, 1000)))));
+    Map<ExpressionContext, ExpressionContext> hints = Map.of(dateTruncFunctionExpr, timestampIndexColumn);
     ExpressionContext newEqualsExpression =
         InstancePlanMakerImplV2.overrideWithExpressionHints(equalsExpression, _indexSegment, hints);
     assertEquals(newEqualsExpression.getFunction().getFunctionName(), "equals");
@@ -231,7 +168,7 @@ public class QueryOverrideWithHintsTest {
         RequestUtils.getFunctionExpression("datetrunc", RequestUtils.getLiteralExpression("MONTH"),
             RequestUtils.getIdentifierExpression("ts"));
     Expression timestampIndexColumn = RequestUtils.getIdentifierExpression("$ts$MONTH");
-    pinotQuery.setExpressionOverrideHints(ImmutableMap.of(dateTruncFunctionExpr, timestampIndexColumn));
+    pinotQuery.setExpressionOverrideHints(Map.of(dateTruncFunctionExpr, timestampIndexColumn));
     QueryContext queryContext = QueryContextConverterUtils.getQueryContext(pinotQuery);
     InstancePlanMakerImplV2.rewriteQueryContextWithHints(queryContext, _indexSegment);
     assertEquals(queryContext.getSelectExpressions().get(0).getIdentifier(), "$ts$MONTH");
@@ -246,7 +183,7 @@ public class QueryOverrideWithHintsTest {
         RequestUtils.getFunctionExpression("datetrunc", RequestUtils.getLiteralExpression("DAY"),
             RequestUtils.getIdentifierExpression("ts"));
     Expression timestampIndexColumn = RequestUtils.getIdentifierExpression("$ts$DAY");
-    pinotQuery.setExpressionOverrideHints(ImmutableMap.of(dateTruncFunctionExpr, timestampIndexColumn));
+    pinotQuery.setExpressionOverrideHints(Map.of(dateTruncFunctionExpr, timestampIndexColumn));
     QueryContext queryContext = QueryContextConverterUtils.getQueryContext(pinotQuery);
     InstancePlanMakerImplV2.rewriteQueryContextWithHints(queryContext, _indexSegment);
     assertEquals(queryContext.getSelectExpressions().get(0).getFunction(),
